+ added brite.ua.hasBackfaceVisibility - Fixed IE7/IE8 bug that prevented loading .js on demand (did not resolve) - Updated sample/taskmanager to support Chrome on Win when no backfaceVisibility.

--- a/sample/taskmanager/css/ProjectView.css
+++ b/sample/taskmanager/css/ProjectView.css
@@ -33,7 +33,7 @@
 }
 
 .ProjectView .card-front{
-  
+  -webkit-transform: rotateY( 0deg );
 }
 
 .ProjectView .card-back{
@@ -41,6 +41,10 @@
   -moz-transform: rotateY( -180deg );
   -o-transform:rotateY(-180deg); /* Opera */
   transform: rotateY( -180deg );
+}
+
+.has-no-backfacevisibility .ProjectView .card-back{
+  display: none;
 }
 
 .ProjectView .card.flipped {
@@ -256,11 +260,4 @@
 }
 
 /* --- /deleteMode --- */
-
-
-/* --------- for opera --------- */
-.is-opera .card-back{
-	display:none;
-}
-/* --------- /for opera --------- */
 
